Revision history for Path-Class-Tiny

{{$NEXT}}

    [Bug Fixes]
    * `parent` is returning the proper class now

    [Distro Fixes]
    * minor tweaks to POD
    * more unit tests

0.01      2018-05-26 03:47:15-07:00 America/Los_Angeles

    [Initial Version]
    * Path::Class::Tiny isa Path::Tiny
    * `dir` and `file` => `path`
    * `parent` and `child` return proper class
    * some simple mappings: `dir` => `parent`, `subdir` => `child`,
      `rmtree` => `remove_tree`
    * a few minor things working: `cleanup`, `open`, `slurp`, `spew`, `next`
    * two (hacked up) unit tests from Path::Class (mostly) passing
    * basic POD added
    * NEW METHOD: `ef` (works like `-ef` in bash)